Fix pofiles Update french translation from Rosetta

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -163,6 +163,7 @@ src/stream_output/announce.c
 src/stream_output/sap.c
 src/stream_output/stream_output.c
 src/test/i18n_atof.c
+src/test/url.c
 src/video_output/video_output.c
 src/video_output/video_text.c
 src/video_output/video_widgets.c
@@ -492,8 +493,6 @@ modules/gui/macosx/prefs.h
 modules/gui/macosx/prefs.m
 modules/gui/macosx/prefs_widgets.h
 modules/gui/macosx/prefs_widgets.m
-modules/gui/macosx/sfilters.h
-modules/gui/macosx/sfilters.m
 modules/gui/macosx/update.h
 modules/gui/macosx/update.m
 modules/gui/macosx/vout.h
@@ -640,6 +639,8 @@ modules/gui/skins2/src/generic_layout.cpp
 modules/gui/skins2/src/generic_layout.hpp
 modules/gui/skins2/src/generic_window.cpp
 modules/gui/skins2/src/generic_window.hpp
+modules/gui/skins2/src/ini_file.cpp
+modules/gui/skins2/src/ini_file.hpp
 modules/gui/skins2/src/logger.cpp
 modules/gui/skins2/src/logger.hpp
 modules/gui/skins2/src/os_factory.cpp
